--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h1  onclick="playAudio()">Happy Birthday Cubi</h1>
         <p>Thêm một tuổi mới, chúc em trưởng thành hơn, chín chắn hơn. Mọi điều tốt đẹp sẽ đến với em, vì em xứng đáng được như vậy. Sinh nhật vui vẻ nhé!</p>
         <h6>- from <a title="Click" target="_blank" href="https://www.facebook.com/phamlonghai611/">Mixa</a></h6>
-        <img class="image1" src="./images/image1.jpg" data-src="./images/image1.jpg" loading="lazy" alt="">
-        <img class="image2" src="./images/image2.jpg" data-src="./images/image2.jpg" loading="lazy" alt="">
-        <img class="image3" src="./images/image3.jpg" data-src="./images/image3.jpg" loading="lazy" alt="">
-        <img class="image4" src="./images/image4.jpg" data-src="./images/image4.jpg" loading="lazy" alt="">
-        <img class="image5" src="./images/image5.jpg" data-src="./images/image5.jpg" loading="lazy" alt="">
+        <a target="_blank" href="https://beyond089.github.io/happy-birthday/images/image1.jpg"><img class="image1" src="./images/image1.jpg" data-src="./images/image1.jpg" loading="lazy" alt=""></a>
+        <a target="_blank" href="https://beyond089.github.io/happy-birthday/images/image2.jpg"><img class="image2" src="./images/image2.jpg" data-src="./images/image2.jpg" loading="lazy" alt=""></a>
+        <a target="_blank" href="https://beyond089.github.io/happy-birthday/images/image3.jpg"><img class="image3" src="./images/image3.jpg" data-src="./images/image3.jpg" loading="lazy" alt=""></a>
+        <a target="_blank" href="https://beyond089.github.io/happy-birthday/images/image4.jpg"><img class="image4" src="./images/image4.jpg" data-src="./images/image4.jpg" loading="lazy" alt=""></a>
+        <a target="_blank" href="https://beyond089.github.io/happy-birthday/images/image5.jpg"><img class="image5" src="./images/image5.jpg" data-src="./images/image5.jpg" loading="lazy" alt=""></a>
     </div>
 
     <audio id="myAudio" loop>
