--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="text_hpbd">
-        <h1  onclick="playAudio()">Happy Birthday Cubi</h1>
+        <h1 onmouseover="hoverOn();" onmouseout="hoverOut();" onclick="playAudio()">Happy Birthday Cubi</h1>
         <p>Thêm một tuổi mới, chúc em trưởng thành hơn, chín chắn hơn. Mọi điều tốt đẹp sẽ đến với em, vì em xứng đáng được như vậy. Sinh nhật vui vẻ nhé!</p>
         <h6>- from <a title="Click" target="_blank" href="https://www.facebook.com/phamlonghai611/">Mixa</a></h6>
         <a target="_blank" href="https://beyond089.github.io/happy-birthday/images/image1.jpg"><img class="image1" src="./images/image1.jpg" data-src="./images/image1.jpg" loading="lazy" alt=""></a>
